--- a/src/app/components/user/register/register.component.html
+++ b/src/app/components/user/register/register.component.html
@@ -10,7 +10,7 @@
         <div class="form-group">
             <input class="form-control" type="password" placeholder="Verify Password">
         </div>
-        <a href="Profile.html" class="btn btn-primary btn-block">Register</a>
-        <a href="Login.html" class="btn btn-danger btn-block">Cancel</a>
+        <a routerLink="/user/:uid" class="btn btn-primary btn-block">Register</a>
+        <a routerLink="/login" class="btn btn-danger btn-block">Cancel</a>
     </form>
 </div>
