--- a/src/app/components/website/website-new/website-new.component.html
+++ b/src/app/components/website/website-new/website-new.component.html
@@ -2,19 +2,19 @@
 <nav class="navbar navbar-dark bg-primary fixed-top row nav-height">
     <!-- Left Nav -->
     <div class="col-4 d-none d-sm-block">
-        <a class="color-white" href="Website-list.html"><i class="fas fa-chevron-left"></i></a>
-        <a class="color-white padding-left" href="#">
+        <a class="color-white" routerLink="/user/:uid/website"><i class="fas fa-chevron-left"></i></a>
+        <a class="color-white padding-left" routerLink="/user/:uid/website/new">
             <h5 class='display-inline'>Websites</h5>
         </a>
-        <a class="color-white float-right" href="Website-new.html"><i class="fas fa-plus"></i></a>
+        <a class="color-white float-right" routerLink="/user/:uid/website/new"><i class="fas fa-plus"></i></a>
     </div>
     <!-- Right Nav -->
     <div class="col-sm-8">
-        <a class="color-white d-sm-none" href="Website-list.html"><i class="fas fa-chevron-left"></i></a>
-        <a class="color-white padding-left" href="#">
+        <a class="color-white d-sm-none" routerLink="/user/:uid/website"><i class="fas fa-chevron-left"></i></a>
+        <a class="color-white padding-left" routerLink="/user/:uid/website/new">
             <h5 class="display-inline">New Website</h5>
         </a>
-        <a class="color-white float-right" href="Website-list.html"><i class="fas fa-check"></i></a>
+        <a class="color-white float-right" routerLink="/user/:uid/website"><i class="fas fa-check"></i></a>
     </div>
 </nav>
 <!-- List & Form -->
@@ -24,20 +24,20 @@
         <div class="container-fluid">
             <ul class="list-group">
                 <li class="list-group-item">
-                    <a href="../Page/Page-list.html">Address Book App</a>
-                    <a class="float-right" href="Website-edit.html"><i class="fas fa-cog"></i></a>
+                    <a routerLink="/user/:uid/website/:wid/page">Address Book App</a>
+                    <a class="float-right" routerLink="/user/:uid/website/:wid"><i class="fas fa-cog"></i></a>
                 </li>
                 <li class="list-group-item">
-                    <a href="../Page/Page-list.html">Blogger</a>
-                    <a class="float-right" href="Website-edit.html"><i class="fas fa-cog"></i></a>
+                    <a routerLink="/user/:uid/website/:wid/page">Blogger</a>
+                    <a class="float-right" routerLink="/user/:uid/website/:wid"><i class="fas fa-cog"></i></a>
                 </li>
                 <li class="list-group-item">
-                    <a href="../Page/Page-list.html">Blogging App</a>
-                    <a class="float-right" href="Website-edit.html"><i class="fas fa-cog"></i></a>
+                    <a routerLink="/user/:uid/website/:wid/page">Blogging App</a>
+                    <a class="float-right" routerLink="/user/:uid/website/:wid"><i class="fas fa-cog"></i></a>
                 </li>
                 <li class="list-group-item">
-                    <a href="../Page/Page-list.html">Script Testing App</a>
-                    <a class="float-right" href="Website-edit.html"><i class="fas fa-cog"></i></a>
+                    <a routerLink="/user/:uid/website/:wid/page">Script Testing App</a>
+                    <a class="float-right" routerLink="/user/:uid/website/:wid"><i class="fas fa-cog"></i></a>
                 </li>
             </ul>
         </div>
@@ -54,8 +54,8 @@
                     <label for="description"><b>Description</b></label>
                     <textarea id="description" rows="5" class="form-control" type="text" placeholder="Describe the Website"></textarea>
                 </div>
-                <a href="Website-list.html" class="btn btn-lg btn-warning">Cancel</a>
-                <a href="Website-list.html" class="btn btn-lg btn-success float-right">Submit</a>
+                <a routerLink="/user/:uid/website" class="btn btn-lg btn-warning">Cancel</a>
+                <a routerLink="/user/:uid/website" class="btn btn-lg btn-success float-right">Submit</a>
             </form>
         </div>
     </div>
@@ -63,6 +63,6 @@
 <!-- Footer -->
 <nav class="navbar navbar-dark bg-primary fixed-bottom">
     <div class="full-width">
-        <a class="color-white float-right" href="../User/Profile.html"><i class="fas fa-user"></i></a>
+        <a class="color-white float-right" routerLink="/user/:uid"><i class="fas fa-user"></i></a>
     </div>
 </nav>
