--- a/src/app/components/page/page-new/page-new.component.html
+++ b/src/app/components/page/page-new/page-new.component.html
@@ -1,8 +1,8 @@
 <!-- Navbar -->
 <nav class="navbar navbar-light fixed-top bg-light">
-    <a class="color-black" href="Page-list.html"><i class="fas fa-chevron-left"></i></a>
-    <a class="navbar-brand" href="Page-new.html">New Page</a>
-    <a class="color-black" href="Page-list.html"><i class="fas fa-check"></i></a>
+    <a class="color-black" routerLink="/user/:uid/website/:wid/page"><i class="fas fa-chevron-left"></i></a>
+    <a class="navbar-brand" href="/user/:uid/website/:wid/page/new">New Page</a>
+    <a class="color-black" routerLink="/user/:uid/website/:wid/page"><i class="fas fa-check"></i></a>
 </nav>
 <!-- Form -->
 <div class='container'>
@@ -15,13 +15,13 @@
             <label for="title"><b>Title</b></label>
             <input class="form-control" type="text" id="title" placeholder="Title of the page...">
         </div>
-        <a href="Page-list.html" class="btn btn-lg btn-warning">Cancel</a>
-        <a href="Page-list.html" class="btn btn-lg btn-success float-right">Submit</a>
+        <a routerLink="/user/:uid/website/:wid/page" class="btn btn-lg btn-warning">Cancel</a>
+        <a routerLink="/user/:uid/website/:wid/page" class="btn btn-lg btn-success float-right">Submit</a>
     </form>
 </div>
 <!-- Footer -->
 <footer class="navbar navbar-light fixed-bottom bg-light">
     <div class="full-width">
-        <a class="color-black float-right" href="../User/Profile.html"><i class="fas fa-user"></i></a>
+        <a class="color-black float-right" routerLink="/user/:uid"><i class="fas fa-user"></i></a>
     </div>
 </footer>
