widget-list routerlinks

--- a/src/app/components/widget/widget-list/widget-list.component.html
+++ b/src/app/components/widget/widget-list/widget-list.component.html
@@ -1,8 +1,8 @@
 <!-- Navbar -->
 <nav class="navbar navbar-light fixed-top bg-light">
-    <a class="color-black" href="../Page/Page-list.html"><i class="fas fa-chevron-left"></i></a>
-    <a class="navbar-brand" href="Widget-list.html">Widgets</a>
-    <a class="color-black" href="Widget-chooser.html"><i class="fas fa-plus"></i></a>
+    <a class="color-black" routerLink="/user/:uid/website/:wid/page"><i class="fas fa-chevron-left"></i></a>
+    <a class="navbar-brand" routerLink="/user/:uid/website/:wid/page/:pid/widget">Widgets</a>
+    <a class="color-black" routerLink="/user/:uid/website/:wid/page/:pid/widget/new"><i class="fas fa-plus"></i></a>
 </nav>
 <!-- Main Content -->
 <div class="container-fluid">
@@ -10,8 +10,8 @@
     <div>
         <!-- Icons -->
         <div class="absolute-right">
-            <a href="Widget-heading.html"><i class="fas fa-cog"></i></a>
-            <a href="#"><i class="fas fa-bars"></i></a>
+            <a routerLink="/user/:uid/website/:wid/page/:pid/widget/:wgid"><i class="fas fa-cog"></i></a>
+            <a routerLink="/user/:uid/website/:wid/page/:pid/widget"><i class="fas fa-bars"></i></a>
         </div>
         <!-- Content -->
         <div>
@@ -22,8 +22,8 @@
     <div>
         <!-- Icons -->
         <div class="absolute-right">
-            <a href="Widget-heading.html"><i class="fas fa-cog"></i></a>
-            <a href="#"><i class="fas fa-bars"></i></a>
+            <a routerLink="/user/:uid/website/:wid/page/:pid/widget/:wgid"><i class="fas fa-cog"></i></a>
+            <a routerLink="/user/:uid/website/:wid/page/:pid/widget"><i class="fas fa-bars"></i></a>
         </div>
         <!-- Content -->
         <div>
@@ -34,8 +34,8 @@
     <div>
         <!-- Icons -->
         <div class="absolute-right">
-            <a href="Widget-image.html"><i class="fas fa-cog"></i></a>
-            <a href="#"><i class="fas fa-bars"></i></a>
+            <a routerLink="/user/:uid/website/:wid/page/:pid/widget/:wgid"><i class="fas fa-cog"></i></a>
+            <a routerLink="/user/:uid/website/:wid/page/:pid/widget"><i class="fas fa-bars"></i></a>
         </div>
         <!-- Content -->
         <div>
@@ -47,8 +47,8 @@
     <div>
         <!-- Icons -->
         <div class="absolute-right">
-            <a href="Widget-heading.html"><i class="fas fa-cog"></i></a>
-            <a href="#"><i class="fas fa-bars"></i></a>
+            <a routerLink="/user/:uid/website/:wid/page/:pid/widget/:wgid"><i class="fas fa-cog"></i></a>
+            <a routerLink="/user/:uid/website/:wid/page/:pid/widget"><i class="fas fa-bars"></i></a>
         </div>
         <!-- Content -->
         <div>
@@ -63,8 +63,8 @@
     <div>
         <!-- Icons -->
         <div class="absolute-right">
-            <a href="Widget-heading.html"><i class="fas fa-cog"></i></a>
-            <a href="#"><i class="fas fa-bars"></i></a>
+            <a routerLink="/user/:uid/website/:wid/page/:pid/widget/:wgid"><i class="fas fa-cog"></i></a>
+            <a routerLink="/user/:uid/website/:wid/page/:pid/widget"><i class="fas fa-bars"></i></a>
         </div>
         <!-- Content -->
         <div>
@@ -75,8 +75,8 @@
     <div>
         <!-- Icons -->
         <div class="absolute-right">
-            <a href="Widget-youtube.html"><i class="fas fa-cog"></i></a>
-            <a href="#"><i class="fas fa-bars"></i></a>
+            <a routerLink="/user/:uid/website/:wid/page/:pid/widget/:wgid"><i class="fas fa-cog"></i></a>
+            <a routerLink="/user/:uid/website/:wid/page/:pid/widget"><i class="fas fa-bars"></i></a>
         </div>
         <!-- Content -->
         <div class="embed-responsive embed-responsive-16by9">
@@ -88,8 +88,8 @@
     <div>
         <!-- Icons -->
         <div class="absolute-right">
-            <a href="Widget-heading.html"><i class="fas fa-cog"></i></a>
-            <a href="#"><i class="fas fa-bars"></i></a>
+            <a routerLink="/user/:uid/website/:wid/page/:pid/widget/:wgid"><i class="fas fa-cog"></i></a>
+            <a routerLink="/user/:uid/website/:wid/page/:pid/widget"><i class="fas fa-bars"></i></a>
         </div>
         <!-- Content -->
         <div>
@@ -102,6 +102,6 @@
 <!-- Footer -->
 <footer class="navbar navbar-light fixed-bottom bg-light">
     <div class="full-width">
-        <a class="color-black float-right" href="../User/Profile.html"><i class="fas fa-user"></i></a>
+        <a class="color-black float-right" routerLink="/user/:uid"><i class="fas fa-user"></i></a>
     </div>
 </footer>
