--- a/src/app/components/widget/widget-edit/widget-edit.component.html
+++ b/src/app/components/widget/widget-edit/widget-edit.component.html
@@ -1,3 +1,11 @@
-<p>
-  widget-edit works!
-</p>
+<div [ngSwitch]="widget.widgetType">
+    <div *ngSwitchCase="'HEADING'">
+        <app-widget-heading></app-widget-heading>
+    </div>
+    <div *ngSwitchCase="'IMAGE'">
+        <app-widget-image></app-widget-image>
+    </div>
+    <div *ngSwitchCase="'YOUTUBE'">
+        <app-widget-youtube></app-widget-youtube>
+    </div>
+</div>
