--- a/src/app/components/widget/widget-list/widget-list.component.html
+++ b/src/app/components/widget/widget-list/widget-list.component.html
@@ -1,107 +1,56 @@
 <!-- Navbar -->
 <nav class="navbar navbar-light fixed-top bg-light">
-    <a class="color-black" routerLink="/user/:uid/website/:wid/page"><i class="fas fa-chevron-left"></i></a>
-    <a class="navbar-brand" routerLink="/user/:uid/website/:wid/page/:pid/widget">Widgets</a>
-    <a class="color-black" routerLink="/user/:uid/website/:wid/page/:pid/widget/new"><i class="fas fa-plus"></i></a>
+    <a class="color-black" routerLink="/user/{{uid}}/website/{{wid}}/page"><i class="fas fa-chevron-left"></i></a>
+    <a class="navbar-brand" routerLink="/user/{{uid}}/website/{{wid}}/page/{{pid}}/widget">Widgets</a>
+    <a class="color-black" routerLink="/user/{{uid}}/website/{{wid}}/page/{{pid}}/widget/new"><i class="fas fa-plus"></i></a>
 </nav>
 <!-- Main Content -->
 <div class="container-fluid">
-    <!-- Heading Widget -->
-    <div>
+    <!-- Widgets -->
+    <div *ngFor="let widget of widgets">
         <!-- Icons -->
         <div class="absolute-right">
-            <a routerLink="/user/:uid/website/:wid/page/:pid/widget/:wgid"><i class="fas fa-cog"></i></a>
-            <a routerLink="/user/:uid/website/:wid/page/:pid/widget"><i class="fas fa-bars"></i></a>
+            <a routerLink="/user/{{uid}}/website/{{wid}}/page/{{pid}}/widget/{{widget._id}}"><i class="fas fa-cog"></i></a>
+            <a routerLink="/user/{{uid}}/website/{{wid}}/page/{{pid}}/widget"><i class="fas fa-bars"></i></a>
         </div>
         <!-- Content -->
-        <div>
-            <h1>Welcome</h1>
-        </div>
-    </div>
-    <!-- Heading Widget -->
-    <div>
-        <!-- Icons -->
-        <div class="absolute-right">
-            <a routerLink="/user/:uid/website/:wid/page/:pid/widget/:wgid"><i class="fas fa-cog"></i></a>
-            <a routerLink="/user/:uid/website/:wid/page/:pid/widget"><i class="fas fa-bars"></i></a>
-        </div>
-        <!-- Content -->
-        <div>
-            <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique saepe vel sit repellendus quis</h3>
-        </div>
-    </div>
-    <!-- Image Widget -->
-    <div>
-        <!-- Icons -->
-        <div class="absolute-right">
-            <a routerLink="/user/:uid/website/:wid/page/:pid/widget/:wgid"><i class="fas fa-cog"></i></a>
-            <a routerLink="/user/:uid/website/:wid/page/:pid/widget"><i class="fas fa-bars"></i></a>
-        </div>
-        <!-- Content -->
-        <div>
-            <img class="img-fluid" src="https://www.gettyimages.ie/gi-resources/images/Homepage/Hero/UK/CMS_Creative_164657191_Kingfisher.jpg"
-                alt="bird image">
-        </div>
-    </div>
-    <!-- Heading Widget -->
-    <div>
-        <!-- Icons -->
-        <div class="absolute-right">
-            <a routerLink="/user/:uid/website/:wid/page/:pid/widget/:wgid"><i class="fas fa-cog"></i></a>
-            <a routerLink="/user/:uid/website/:wid/page/:pid/widget"><i class="fas fa-bars"></i></a>
-        </div>
-        <!-- Content -->
-        <div>
-            <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, architecto dignissimos.
-                Voluptatibus placeat excepturi eum <a href="http://www.google.com">repellendus totam quam error
-                    atque</a> asperiores, blanditiis
-                sequi
-                sit, reiciendis quibusdam? In numquam expedita impedit.</h5>
-        </div>
-    </div>
-    <!-- Heading Widget -->
-    <div>
-        <!-- Icons -->
-        <div class="absolute-right">
-            <a routerLink="/user/:uid/website/:wid/page/:pid/widget/:wgid"><i class="fas fa-cog"></i></a>
-            <a routerLink="/user/:uid/website/:wid/page/:pid/widget"><i class="fas fa-bars"></i></a>
-        </div>
-        <!-- Content -->
-        <div>
-            <h3> vel sit repellendus quis</h3>
-        </div>
-    </div>
-    <!-- Youtube Widget -->
-    <div>
-        <!-- Icons -->
-        <div class="absolute-right">
-            <a routerLink="/user/:uid/website/:wid/page/:pid/widget/:wgid"><i class="fas fa-cog"></i></a>
-            <a routerLink="/user/:uid/website/:wid/page/:pid/widget"><i class="fas fa-bars"></i></a>
-        </div>
-        <!-- Content -->
-        <div class="embed-responsive embed-responsive-16by9">
-            <iframe width="1903" height="769" src="https://www.youtube.com/embed/SqrbIlUwR0U" frameborder="0" allow="autoplay; encrypted-media"
-                allowfullscreen></iframe>
-        </div>
-    </div>
-    <!-- Heading Widget -->
-    <div>
-        <!-- Icons -->
-        <div class="absolute-right">
-            <a routerLink="/user/:uid/website/:wid/page/:pid/widget/:wgid"><i class="fas fa-cog"></i></a>
-            <a routerLink="/user/:uid/website/:wid/page/:pid/widget"><i class="fas fa-bars"></i></a>
-        </div>
-        <!-- Content -->
-        <div>
-            <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis nostrum maiores blanditiis iste
-                doloribus harum magni ullam repellat eaque? Et veniam accusantium illo nostrum dolores temporibus.
-                Cum cupiditate alias eius.</h5>
+        <div [ngSwitch]="widget.widgetType">
+            <div *ngSwitchCase="'HEADING'">
+                <div [ngSwitch]="widget.size">
+                    <div *ngSwitchCase="1">
+                        <h1>{{widget.text}}</h1>
+                    </div>
+                    <div *ngSwitchCase="2">
+                        <h2>{{widget.text}}</h2>
+                    </div>
+                    <div *ngSwitchCase="3">
+                        <h3>{{widget.text}}</h3>
+                    </div>
+                    <div *ngSwitchCase="4">
+                        <h4>{{widget.text}}</h4>
+                    </div>
+                    <div *ngSwitchCase="5">
+                        <h5>{{widget.text}}</h5>
+                    </div>
+                    <div *ngSwitchCase="6">
+                        <h6>{{widget.text}}</h6>
+                    </div>
+                </div>
+            </div>
+            <div *ngSwitchCase="'IMAGE'">
+                <img [src]="widget.url" [style.width]="widget.width" />
+            </div>
+            <div *ngSwitchCase="'YOUTUBE'">
+                <div class="embed-responsive embed-responsive-16by9">
+                    <iframe [src]="parseYoutubeSrc(widget.url)" [style.width]="widget.width" allowfullscreen></iframe>
+                </div>
+            </div>
         </div>
     </div>
 </div>
 <!-- Footer -->
 <footer class="navbar navbar-light fixed-bottom bg-light">
     <div class="full-width">
-        <a class="color-black float-right" routerLink="/user/:uid"><i class="fas fa-user"></i></a>
+        <a class="color-black float-right" routerLink="/user/{{uid}}"><i class="fas fa-user"></i></a>
     </div>
 </footer>
